# Boston-311

./: .gitignore  README.md  boston_311_tutorial.ipynb  logreg.keras  logregproperties.json  logtreeproperties.json  pyproject.toml  requirements.txt  setup.py  setup.sh  tutorial.ipynb
Boston-311-py-package/: __init__.py  init.py  load_data.py  train_models.py  unit_tests.py
models/: 2023-09-11_19-11-02_manifest.txt  AddDescriptionVectors.ipynb  CreateDescriptionEmbeddings.ipynb  DailyExport.ipynb  Download311fromAPI.ipynb  Download311fromAPIforPredict.ipynb  LocalFileUpdate.ipynb  daily.py  daily_prediction_and_export.ipynb  daily_prediction_and_export_keras.ipynb  daily_prediction_and_export_orig.ipynb  iterative_modeling_with_user_library (1).ipynb  logreg.h5  logregproperties.json  logtree.pkl  save_models_and_predictions.ipynb  train_and_save_models.ipynb  train_and_save_models_iterative.ipynb  visualizeModels.ipynb
results/: Boston311.ipynb  Boston311_v10.ipynb  Boston311_v2.ipynb  Boston311_v3.ipynb  Boston311_v4.ipynb  Boston311_v5.ipynb  Boston311_v6.ipynb  Boston311_v7.ipynb  Boston311_v8.ipynb  Boston311_v9.ipynb
src/: __init__.py  boston_311.py
src/boston311/: Boston311CoxReg.py  Boston311EventDecTree.py  Boston311KerasNLP.py  Boston311KerasNN.py  Boston311LinReg.py  Boston311LogReg.py  Boston311Model.py  Boston311SurvDecTree.py  __init__.py  data_clean.py  load_data.py  output.txt  train_models.py  unit_tests.py
src/boston311.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/boston_311/: load_data.py  (+3 more)
tests/: testBoston311Model.py  unit_tests.py
(+235 files in other folders)
