[project]
name = "boston_311"
version = "0.0.2"
authors = [
  { name="Alex Alcivar", email="alex.g.alcivar49@gmail.com" },
]
description = "A package for training machine learning models on Boston 311 data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mindfulcoder49/Boston_311"
"Bug Tracker" = "https://github.com/mindfulcoder49/Boston_311"